--- a/catalog.html
+++ b/catalog.html
@@ -17,8 +17,8 @@
 					<form class="search-form" action="" method="post">
 						<input type="search" name="search" placeholder="Поиск:"> 
 					</form>
-					<a class="bookmarks" href="#">Закладки</a>
-					<a class="basket" href="#">Корзина</a>
+					<a class="bookmarks" href="#">Закладки: 0</a>
+					<a class="basket" href="#">Корзина: 0</a>
 					<a class="order" href="#">Оформить заказ</a>
 				</div>
 			</div>
@@ -29,8 +29,13 @@
 					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 				</div>
 				<div class="user-navigation-personal">
-					<a class="user-navigation-name" href="#" aria-label="имя пользователя">Равшан Джамшутович</a>       
-					<a class="user-navigation-output" href="#" aria-label="выход"></a> 
+					<div class="user-navigation-name-wrapper">
+						<a class="user-navigation-name" href="#" aria-label="имя пользователя">Равшан Джамшутович</a>       
+						<a class="user-navigation-output" href="#" aria-label="выход">
+							<img src="img/icon-logout.png" width="20" height="17" alt="
+							Выход">
+						</a>
+					</div>		
 					<ul class="user-navigation-list">
 						<li><a class="my-orders" href="#">Мои заказы</a></li>
 						<li><a class="personal-area" href="#">Личный кабинет</a></li>
@@ -52,7 +57,12 @@
 		<main class="choice">
 			<div class="container">
 				<ul class="breadcrumbs">
-					<li><a href="index.html" aria-label="главная страница"></a></li>
+					<li>
+						<a href="index.html" aria-label="главная страница">
+							<img src="img/icon-home.png" width="14" height="12" alt="
+							Главная страница">
+						</a>
+					</li>
 					<li><a href="catalog.html">Каталог</a></li>
 					<li><a href="tool.html">Инструмент</a></li>
 					<li class="breadcrumbs-current">Перфораторы</li>
@@ -60,7 +70,7 @@
 				<h1>Перфораторы</h1>
 				<div class="choice-wrapper">
 					<section class="filters">
-						<!-- <h2 class="visually-hidden">Фильтр товаров</h2> -->
+						<h2 class="visually-hidden">Фильтр товаров</h2>
 						<!-- 
 							<div class="filters-price">
 							Фильтр по цене
@@ -71,23 +81,23 @@
 								<legend class="filters-type">Производители:</legend>
 								<ul class="product-filter">
 									<li class="product-filter-item">
-										<input id="filter-bosch" type="checkbox" name="filter-checkbox" value="BOSCH">
+										<input class="visually-hidden" id="filter-bosch" type="checkbox" name="filter-checkbox" value="BOSCH" checked>
 										<label for="filter-bosch">BOSCH</label>
 									</li>
 									<li class="product-filter-item"> 
-										<input id="filter-interskul" type="checkbox" name="filter-checkbox" value="ИНТЕРСКОЛ">
+										<input class="visually-hidden" id="filter-interskul" type="checkbox" name="filter-checkbox" value="ИНТЕРСКОЛ">
 										<label for="filter-interskul">ИНТЕРСКОЛ</label>
 									</li>
 									<li class="product-filter-item"> 
-										<input id="filter-makita" type="checkbox" name="filter-checkbox" value="MAKITA">
+										<input class="visually-hidden" id="filter-makita" type="checkbox" name="filter-checkbox" value="MAKITA" checked>
 										<label for="filter-makita">MAKITA</label>
 									</li>
 									<li class="product-filter-item"> 
-										<input id="filter-dewalt" type="checkbox" name="filter-checkbox" value="DEWALT">
+										<input class="visually-hidden" id="filter-dewalt" type="checkbox" name="filter-checkbox" value="DEWALT">
 										<label for="filter-dewalt">DEWALT</label>
 									</li>
 									<li class="product-filter-item"> 
-										<input id="filter-hitachi" type="checkbox" name="filter-checkbox" value="HITACHI">
+										<input class="visually-hidden" id="filter-hitachi" type="checkbox" name="filter-checkbox" value="HITACHI">
 										<label for="filter-hitachi">HITACHI</label>
 									</li>
 								</ul>
@@ -96,11 +106,11 @@
 								<legend class="filters-type">Питание:</legend>
 								<ul class="nutrition-filter">
 									<li class="nutrition-filter-item"> 
-										<input id="filter-battery" type="radio" name="nutrition" value="battery">
+										<input class="visually-hidden" id="filter-battery" type="radio" name="nutrition" value="battery">
 										<label for="filter-battery">Аккумуляторны</label>
 									</li>
 									<li class="nutrition-filter-item"> 
-										<input id="filter-network" type="radio" name="nutrition" value="network">
+										<input class="visually-hidden" id="filter-network" type="radio" name="nutrition" value="network">
 										<label for="filter-network">Сетевые</label>
 									</li>
 								</ul>
@@ -109,7 +119,7 @@
 						</form> 
 					</section>
 					<section class="catalog">
-						<!-- <h2 class="visually-hidden">Каталог перфораторов</h2> -->
+						<h2 class="visually-hidden">Каталог перфораторов</h2>
 						<div class="sorting">
 							<p>Сортировка</p>
 						</div>
@@ -130,7 +140,7 @@
 									<a class="catalog-item-bиtton" href="#">25500 Р.</a>
 								</p>
 							</li>
-							<li class="catalog-item">
+							<li class="catalog-item flag-new">
 								<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
 								<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000"> 
 								<p class="catalog-item-price">
@@ -146,7 +156,7 @@
 									<a class="catalog-item-bиtton" href="#">15500 Р.</a>
 								</p>
 							</li>
-							<li class="catalog-item">
+							<li class="catalog-item  flag-new">
 								<h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
 								<img src="img/item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
 								<p class="catalog-item-price">
@@ -162,7 +172,7 @@
 									<a class="catalog-item-bиtton" href="#">12500 Р.</a>
 								</p>
 							</li>
-							<li class="catalog-item">
+							<li class="catalog-item  flag-new">
 								<h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
 								<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
 								<p class="catalog-item-price">
@@ -199,7 +209,7 @@
 			<section class="description">
 				<div class="description-wrapper container">
 					<h2 class="description-headline">Пара слов о перфораторах</h2>
-					<p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+					<p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br> Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
 				</div>
 			</section>
 		</main>
@@ -230,33 +240,45 @@
 					<p class="copyright">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
 					<div class="social">
 						<ul class="social-list">
-							<li><a class="social-button" href="#">Вконтакте</a></li>
-							<li><a class="social-button" href="#">Фейсбук</a></li>
-							<li><a class="social-button" href="#">Инстаграм</a></li>
-						</ul>
-					</div>   
-					<div class="developer">
-						<p>Обратная связь:<br>
-							<a href="#">mail@htmlacademy.ru</a>
-						</p>
-						<p>Разработано —<br>
-							<a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-						</p>	  
+							<li><a class="social-button" href="#"><span class="visually-hidden">Вконтакте</span>
+								<svg xmlns="http://www.w3.org/2000/svg" width="27" height="15" viewBox="0 0 26.14 14.91">
+									<path d="M26 13.47l-.09-.17a13.55 13.55 0 0 0-2.6-3q-.87-.83-1.1-1.12A1 1 0 0 1 22 8a10.27 10.27 0 0 1 1.22-1.78l.88-1.16q2.35-3.13 2-4L26 .94a.8.8 0 0 0-.4-.22 2.14 2.14 0 0 0-.87 0h-3.92a.51.51 0 0 0-.27 0h-.3a.6.6 0 0 0-.15.14.93.93 0 0 0-.14.24 22.22 22.22 0 0 1-1.46 3.06q-.5.84-.93 1.46a7 7 0 0 1-.71.91 4.94 4.94 0 0 1-.52.47q-.23.18-.35.15l-.23-.05a.9.9 0 0 1-.31-.33 1.49 1.49 0 0 1-.16-.53v-.55-.65-.57-1.12-1-.75a3.14 3.14 0 0 0 0-.62 2.12 2.12 0 0 0-.14-.44.73.73 0 0 0-.28-.33 1.57 1.57 0 0 0-.46-.18A9 9 0 0 0 12.57 0a8.93 8.93 0 0 0-3.25.33 1.83 1.83 0 0 0-.52.41q-.25.3-.07.33a1.67 1.67 0 0 1 1.16.59l.08.16a2.6 2.6 0 0 1 .19.63 6.32 6.32 0 0 1 .12 1 10.59 10.59 0 0 1 0 1.7q-.07.71-.13 1.1a2.21 2.21 0 0 1-.18.64 2.69 2.69 0 0 1-.16.3l-.07.07a1 1 0 0 1-.37.07.86.86 0 0 1-.46-.19 3.27 3.27 0 0 1-.56-.52 7 7 0 0 1-.66-.93q-.37-.6-.76-1.42l-.22-.39q-.2-.38-.56-1.11t-.62-1.43A.9.9 0 0 0 5.2.9h-.07a.93.93 0 0 0-.22-.16A1.44 1.44 0 0 0 4.6.65L.87.68A1 1 0 0 0 .1.94L0 1a.44.44 0 0 0 0 .22 1.08 1.08 0 0 0 .08.37Q.9 3.53 1.86 5.31t1.66 2.87Q4.23 9.27 5 10.24t1 1.24l.37.41.34.33a8.06 8.06 0 0 0 1 .78 16.34 16.34 0 0 0 1.4.9 7.6 7.6 0 0 0 1.79.72 6.19 6.19 0 0 0 2 .22h1.57a1.08 1.08 0 0 0 .72-.3l.05-.07a.9.9 0 0 0 .1-.25 1.38 1.38 0 0 0 0-.37 4.48 4.48 0 0 1 .09-1.05 2.77 2.77 0 0 1 .23-.71 1.74 1.74 0 0 1 .29-.4 1.19 1.19 0 0 1 .23-.2h.11a.86.86 0 0 1 .77.21 4.52 4.52 0 0 1 .83.79q.39.47.93 1.05a6.41 6.41 0 0 0 1 .87l.27.16a3.31 3.31 0 0 0 .71.3 1.53 1.53 0 0 0 .76.07l3.48-.05a1.58 1.58 0 0 0 .8-.17.68.68 0 0 0 .34-.37 1.06 1.06 0 0 0 0-.46 1.71 1.71 0 0 0-.1-.36z" fill="#fff">
+									</path>
+								</svg>
+							</a></li>
+							<li><a class="social-button" href="#"><span class="visually-hidden">Фейсбук</span>
+								<svg xmlns="http://www.w3.org/2000/svg" width="19" height="22" viewBox="0 0 10.15 21.74"><path d="M3.34 1.12A4.77 4.77 0 0 1 6.53 0h3.61v3.81H7.81a1.07 1.07 0 0 0-1.09.83v2.55h3.42c-.08 1.23-.24 2.45-.41 3.67h-3v10.87H2.21V10.86H0V7.21h2.19V3.66a3.83 3.83 0 0 1 1.15-2.54z" fill="#fff"/>
+								</a></li>
+								<li><a class="social-button" href="#"><span class="visually-hidden">Инстаграм</span>
+									<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+										<path d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z" fill="#fff">
+										</path>
+									</svg>
+								</a></li>
+							</ul>
+						</div>   
+						<div class="developer">
+							<p>Обратная связь:<br>
+								<a href="#">mail@htmlacademy.ru</a>
+							</p>
+							<p>Разработано —<br>
+								<a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+							</p>	  
+						</div>
 					</div>
 				</div>
+			</footer>
+			
+			<div class="modal-information">
+				<button class="modal-close" type="button" aria-label="закрыть окно"></button>
+				<h2 class="modal-information-headline container-modal">Товар добавлен в корзину!</h2>
+				<div class="modal-information-wrapper">
+					<p class="container-modal">
+						<a class="modal-information-make button" href="#">Oформить заказ</a>
+						<button class="modal-information-continue" type="button">Продолжить покупки</button>
+					</p>
+				</div>
 			</div>
-		</footer>
-		
-		<div class="modal-information">
-			<button class="modal-close" type="button" aria-label="закрыть окно"></button>
-			<h2 class="modal-information-headline container-modal">Товар добавлен в корзину!</h2>
-			<div class="modal-information-wrapper">
-				<p class="container-modal">
-					<a class="modal-information-make button" href="#">Oформить заказ</a>
-					<button class="modal-information-continue" type="button">Продолжить покупки</button>
-				</p>
-			</div>
-		</div>
-		
-	</body>
-</html>
+			
+		</body>
+	</html>	
