декоративные элементы личного проекта save-3
добавил модульное окно на страницу каталога. добавил раздел "Популярные производители".

--- a/catalog.html
+++ b/catalog.html
@@ -271,9 +271,11 @@
 			
 			<div class="modal modal-information">
 				<button class="modal-close" type="button" aria-label="закрыть окно"></button>
-				<h2 class="modal-information-headline container-modal">Товар добавлен в корзину!</h2>
+				<div class="headline-wrapper">
+					<h2 class="modal-information-headline container-modal">Товар добавлен в корзину!</h2>
+				</div>
 				<div class="modal-information-wrapper">
-					<p class="container-modal">
+					<p class="container-modal-information">
 						<a class="modal-information-make button" href="#">Oформить заказ</a>
 						<button class="modal-information-continue" type="button">Продолжить покупки</button>
 					</p>
