--- a/catalog.html
+++ b/catalog.html
@@ -11,31 +11,31 @@
 		<header class="main-header">
 			<div class="main-menu">
 				<div class="main-menu-wrapper container">
-					<a class="logo">
+					<a class="logo" href="index.html">
 						<img src="img/logo.png" width="109" height="19" alt="Логотип Техномарт">
 					</a>
-					<form class="search-form" action="" method="post">
-						<input type="search" name="search" placeholder="Поиск:"> 
+					<form class="search-form search-form-catalog" action="" method="post">
+						<input type="search" name="search" placeholder="Поиск:">
 					</form>
 					<a class="bookmarks" href="#">Закладки: 0</a>
-					<a class="basket" href="#">Корзина: 0</a>
+					<a class="basket basket-active" href="#">Корзина: 10</a>
 					<a class="order" href="#">Оформить заказ</a>
 				</div>
 			</div>
 			<div class="header-center  container">
-				<h1>Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>  
+				<h1>Интернет-магазин строительных материалов<br> и инструментов для ремонта</h1>
 				<div class="contacts">
 					<p class="telephone">+7 (812) 555-05-55</p>
 					<p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
 				</div>
 				<div class="user-navigation-personal">
 					<div class="user-navigation-name-wrapper">
-						<a class="user-navigation-name" href="#" aria-label="имя пользователя">Равшан Джамшутович</a>       
+						<a class="user-navigation-name" href="#" aria-label="имя пользователя">Равшан Джамшутович</a>
 						<a class="user-navigation-output" href="#" aria-label="выход">
 							<img src="img/icon-logout.png" width="20" height="17" alt="
 							Выход">
 						</a>
-					</div>		
+					</div>
 					<ul class="user-navigation-list">
 						<li><a class="my-orders" href="#">Мои заказы</a></li>
 						<li><a class="personal-area" href="#">Личный кабинет</a></li>
@@ -81,7 +81,7 @@
 									<li class="price-filter-item">
 										<input type="text" name="min-price" placeholder="0">
 									</li>
-									<li class="price-filter-item"> 
+									<li class="price-filter-item">
 										<input type="text" name="max-price" placeholder="30000">
 									</li>
 								</ul>
@@ -93,19 +93,19 @@
 										<input class="visually-hidden" id="filter-bosch" type="checkbox" name="filter-checkbox" value="BOSCH" checked>
 										<label for="filter-bosch">BOSCH</label>
 									</li>
-									<li class="product-filter-item"> 
+									<li class="product-filter-item">
 										<input class="visually-hidden" id="filter-interskul" type="checkbox" name="filter-checkbox" value="ИНТЕРСКОЛ">
 										<label for="filter-interskul">ИНТЕРСКОЛ</label>
 									</li>
-									<li class="product-filter-item"> 
+									<li class="product-filter-item">
 										<input class="visually-hidden" id="filter-makita" type="checkbox" name="filter-checkbox" value="MAKITA" checked>
 										<label for="filter-makita">MAKITA</label>
 									</li>
-									<li class="product-filter-item"> 
+									<li class="product-filter-item">
 										<input class="visually-hidden" id="filter-dewalt" type="checkbox" name="filter-checkbox" value="DEWALT">
 										<label for="filter-dewalt">DEWALT</label>
 									</li>
-									<li class="product-filter-item"> 
+									<li class="product-filter-item">
 										<input class="visually-hidden" id="filter-hitachi" type="checkbox" name="filter-checkbox" value="HITACHI">
 										<label for="filter-hitachi">HITACHI</label>
 									</li>
@@ -114,18 +114,18 @@
 							<fieldset>
 								<legend class="filters-type">Питание:</legend>
 								<ul class="nutrition-filter">
-									<li class="nutrition-filter-item"> 
+									<li class="nutrition-filter-item">
 										<input class="visually-hidden" id="filter-battery" type="radio" name="nutrition" value="battery">
 										<label for="filter-battery">Аккумуляторны</label>
 									</li>
-									<li class="nutrition-filter-item"> 
+									<li class="nutrition-filter-item">
 										<input class="visually-hidden" id="filter-network" type="radio" name="nutrition" value="network">
 										<label for="filter-network">Сетевые</label>
 									</li>
 								</ul>
 							</fieldset>
 							<button class="button-show" type="submit">Показать</button>
-						</form> 
+						</form>
 					</section>
 					<section class="catalog">
 						<h2 class="visually-hidden">Каталог перфораторов</h2>
@@ -143,7 +143,7 @@
 								<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
 								<p class="catalog-item-price">
 									<del>22500 Р.</del>
-									<a class="catalog-item-bиtton" href="#">15500 Р.</a>
+									<a class="catalog-item-button" href="#">15500 Р.</a>
 								</p>
 							</li>
 							<li class="catalog-item">
@@ -151,15 +151,15 @@
 								<img src="img/item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
 								<p class="catalog-item-price">
 									<del>30500 Р.</del>
-									<a class="catalog-item-bиtton" href="#">25500 Р.</a>
+									<a class="catalog-item-button" href="#">25500 Р.</a>
 								</p>
 							</li>
 							<li class="catalog-item flag-new">
 								<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-								<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000"> 
+								<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
 								<p class="catalog-item-price">
 									<span class="old-price"></span>
-									<a class="catalog-item-bиtton" href="#">12500 Р.</a>
+									<a class="catalog-item-button" href="#">12500 Р.</a>
 								</p>
 							</li>
 							<li class="catalog-item">
@@ -167,7 +167,7 @@
 								<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
 								<p class="catalog-item-price">
 									<del>22500 Р.</del>
-									<a class="catalog-item-bиtton" href="#">15500 Р.</a>
+									<a class="catalog-item-button" href="#">15500 Р.</a>
 								</p>
 							</li>
 							<li class="catalog-item  flag-new">
@@ -175,15 +175,15 @@
 								<img src="img/item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
 								<p class="catalog-item-price">
 									<del>30500 Р.</del>
-									<a class="catalog-item-bиtton" href="#">25500 Р.</a>
+									<a class="catalog-item-button" href="#">25500 Р.</a>
 								</p>
 							</li>
 							<li class="catalog-item">
 								<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-								<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000"> 
+								<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
 								<p class="catalog-item-price">
 									<span class="old-price"></span>
-									<a class="catalog-item-bиtton" href="#">12500 Р.</a>
+									<a class="catalog-item-button" href="#">12500 Р.</a>
 								</p>
 							</li>
 							<li class="catalog-item  flag-new">
@@ -191,7 +191,7 @@
 								<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 3000">
 								<p class="catalog-item-price">
 									<del>22500 Р.</del>
-									<a class="catalog-item-bиtton" href="#">15500 Р.</a>
+									<a class="catalog-item-button" href="#">15500 Р.</a>
 								</p>
 							</li>
 							<li class="catalog-item">
@@ -199,17 +199,17 @@
 								<img src="img/item2.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 6000">
 								<p class="catalog-item-price">
 									<del>30500 Р.</del>
-									<a class="catalog-item-bиtton" href="#">25500 Р.</a>
+									<a class="catalog-item-button" href="#">25500 Р.</a>
 								</p>
 							</li>
 							<li class="catalog-item">
 								<h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
-								<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000"> 
+								<img src="img/item1.jpg" width="218" height="170" alt="Перфоратор Bosch bfg 2000">
 								<p class="catalog-item-price">
 									<span class="old-price"></span>
-									<a class="catalog-item-bиtton" href="#">12500 Р.</a>
+									<a class="catalog-item-button" href="#">12500 Р.</a>
 								</p>
-							</li>	  
+							</li>
 						</ul>
 						<ul class="pagination-list">
 							<li class="pagination-item pagination-item-current"><a>1</a></li>
@@ -219,7 +219,7 @@
 						</ul>
 					</section>
 				</div>
-			</div>	
+			</div>
 			<section class="description">
 				<div class="description-wrapper container">
 					<h2 class="description-headline">Пара слов о перфораторах</h2>
@@ -270,19 +270,19 @@
 									</svg>
 								</a></li>
 							</ul>
-						</div>   
+						</div>
 						<div class="developer">
 							<p>Обратная связь:<br>
 								<a href="#">mail@htmlacademy.ru</a>
 							</p>
 							<p>Разработано —<br>
 								<a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-							</p>	  
+							</p>
 						</div>
 					</div>
 				</div>
 			</footer>
-			
+
 			<div class="modal modal-information">
 				<button class="modal-close" type="button" aria-label="закрыть окно"></button>
 				<div class="headline-wrapper">
@@ -295,6 +295,6 @@
 					</p>
 				</div>
 			</div>
-			
+
 		</body>
-	</html>					
+	</html>
