добавил немного js

--- a/catalog.html
+++ b/catalog.html
@@ -327,7 +327,7 @@
 		</footer>
 		
 		<div class="modal modal-information">
-			<button class="modal-close" type="button" aria-label="закрыть окно"></button>
+			<button id="close-modal-information"class="modal-close" type="button" aria-label="закрыть окно"></button>
 			<div class="headline-wrapper">
 				<h2 class="modal-information-headline container-modal">Товар добавлен в корзину!</h2>
 			</div>
