--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<li class="slider-item">
 								<h3>Дрели</h3>
 								<p>Соседям на радость!</p>
-								<a class="button" href="#">Открыть каталог</a>
+								<a class="button" href="catalog.html">Открыть каталог</a>
 							</li>
 							<li class="slider-item">
 								<h3>Перфораторы</h3>
@@ -286,8 +286,9 @@
 		<div class="modal modal-map">
 			<div class="modal-map-wrapper">
 				<h2 class="visually-hidden">Карта</h2>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d810.5170795932968!2d30.322562621384463!3d59.938595063765696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1562274956894!5m2!1sru!2sua" width="940" height="446" frameborder="0" style="border:0" allowfullscreen></iframe>
 				<img class="" src="img/oll-map.jpg" width="940" height="446" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
-				<button class="modal-close" type="button" aria-label="закрыть окно"></button>
+				<button id="close-modal-map" class="modal-close" type="button" aria-label="закрыть окно"></button>
 			</div>
 		</div>
 		<script src="js/script.js"></script>
